# argostats

./: LICENSE  README.md  pyproject.toml
src/argostats/: __init__.py  aos.py  atlas.py  binaryfiles.py  hello.py  interpolation.py  toctools.py
src/argostats/bathy/: bathy.py
src/argostats/figures/: first_profiles.py  maps.py
src/argostats/lorenz/: lorenz_state.py
src/argostats/tools/: colormaps.py  datetools.py  json.py  parallel.py
tests/: test_binaryfiles.py  test_hello.py  test_toctools.py
